# bot-holdem-platfrom

./: .gitignore  Cargo.toml  justfile  mise.toml
.github/workflows/: ci.yml
.run/local_5p/: room_id.txt
config/: default.toml  dev.toml  local.toml  prod.toml  test.toml
contracts/: README.md  foundry.toml
contracts/broadcast/DeployBatchSettlement.s.sol/31337/: run-1772192774.json  run-1772193231.json  run-1772193253.json  run-1772193493.json  run-1772193517.json  run-1772194701.json
contracts/cache/: solidity-files-cache.json
contracts/cache/DeployBatchSettlement.s.sol/31337/: run-1772193517.json
contracts/script/: DeployBatchSettlement.s.sol
contracts/src/: BatchSettlement.sol
crates/agent-auth/: Cargo.toml
crates/agent-auth/src/: lib.rs
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/src/: lib.rs
crates/agent-skill/: Cargo.toml
crates/agent-skill/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: audit_event_sink.rs  auto_settlement.rs  chain_callback_sink.rs  data_layer_consistency.rs  integration_flows.rs  main.rs  outbox_publisher.rs  room_service_port.rs  room_settlement_wallet_adapter.rs  rpc_reject_audit_sink.rs  rpc_request_signature_verifier.rs  seat_crypto_audit_sink.rs  settlement_audit_sink.rs  settlement_orchestrator.rs  showdown_admin_repo.rs  showdown_settlement.rs
crates/audit-store/: Cargo.toml
crates/audit-store/src/: lib.rs
crates/chain-watcher/: Cargo.toml
crates/chain-watcher/src/: lib.rs
crates/headless-agent-client/: Cargo.toml
crates/headless-agent-client/src/: audit.rs  client.rs  lib.rs  main.rs  policy_adapter.rs  runtime.rs  wallet_adapter.rs
crates/ledger-store/: Cargo.toml
crates/ledger-store/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/ops-http/: Cargo.toml
crates/ops-http/src/: lib.rs
crates/platform-core/: Cargo.toml
crates/platform-core/src/: lib.rs
crates/poker-domain/: Cargo.toml
crates/poker-domain/src/: action.rs  errors.rs  events.rs  game.rs  ids.rs  lib.rs  money.rs
crates/poker-engine/: Cargo.toml
crates/poker-engine/src/: engine.rs  lib.rs  state.rs
crates/rpc-gateway/: Cargo.toml
crates/rpc-gateway/src/: lib.rs
crates/seat-crypto/: Cargo.toml
crates/seat-crypto/src/: lib.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: lib.rs
crates/table-service/: Cargo.toml
crates/table-service/src/: lib.rs
docs/: README.md
docs/design/: JSON-RPC接口契约.md  Postgres DDL与Migration说明.md  产品设计与玩法方案.md  技术架构与技术方案.md
docs/dev-rules/: rule.md
docs/guides/: Agent SDK接入说明.md  Agent Skills说明.md  Headless Agent Client使用说明.md
docs/plans/: 总开发进度控制文档.md  模块开发进度文档.md
docs/skills/ai-agent-integration/: SKILL.md
migrations/: 0001_init_mvp.sql  0002_query_indexes.sql  0003_settlement_showdown_inputs.sql  0004_exception_credits_tx_hash_unique.sql
scripts/: codex_decide_wrapper.py  deploy_batch_settlement.sh  deploy_batch_settlement_local_anvil.sh  orchestrate_local_persistent_5p.sh  run_single_seat_codex.py  setup_postgres.sh  smoke_batch_settlement_e2e.sh  smoke_chain_settlement_e2e.sh  smoke_gameplay_e2e.sh
