[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["cooper"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.98"
aes-gcm = "0.10.3"
async-trait = "0.1.89"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
ed25519-dalek = "2.1.1"
futures = "0.3.31"
hkdf = "0.12.4"
hex = "0.4.3"
jsonrpsee = { version = "0.24.7", features = ["server", "macros"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rs_poker = { package = "rs_poker", version = "4.1.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sha3 = "0.10.8"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0.12"
toml = "0.8.23"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.0", features = ["serde", "v4", "v7"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
