[package]
name = "agent-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
poker-domain = { path = "../poker-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
