[package]
name = "agent-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
k256.workspace = true
poker-domain = { path = "../poker-domain" }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
