[package]
name = "headless-agent-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-skill = { path = "../agent-skill" }
anyhow.workspace = true
observability = { path = "../observability" }
tokio.workspace = true
tracing.workspace = true
