[package]
name = "headless-agent-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-sdk = { path = "../agent-sdk" }
anyhow.workspace = true
observability = { path = "../observability" }
poker-domain = { path = "../poker-domain" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
