[package]
name = "rpc-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-auth = { path = "../agent-auth" }
async-trait.workspace = true
chrono.workspace = true
jsonrpsee.workspace = true
platform-core = { path = "../platform-core" }
poker-domain = { path = "../poker-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
k256.workspace = true
