[package]
name = "seat-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
poker-domain = { path = "../poker-domain" }
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
