[package]
name = "settlement"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ledger-store = { path = "../ledger-store" }
poker-domain = { path = "../poker-domain" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
