[package]
name = "settlement"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm.workspace = true
async-trait.workspace = true
chrono.workspace = true
ethabi.workspace = true
hex.workspace = true
ledger-store = { path = "../ledger-store" }
poker-domain = { path = "../poker-domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
