[package]
name = "table-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
poker-domain = { path = "../poker-domain" }
poker-engine = { path = "../poker-engine" }
seat-crypto = { path = "../seat-crypto" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
